src/libonion/src/lexer/snapshots/libonion__lexer__tests__tests__array.snap
---
source: libonion/src/lexer/tests.rs
expression: "[3]"
---
[
  {
    "kind": {
      "type": "LBracket"
    },
    "span": {
      "start": 0,
      "end": 1
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 3
    },
    "span": {
      "start": 1,
      "end": 2
    }
  },
  {
    "kind": {
      "type": "RBracket"
    },
    "span": {
      "start": 2,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 3,
      "end": 4
    }
  }
]
