src/libonion/src/lexer/snapshots/libonion__lexer__tests__tests__bool.snap
---
source: libonion/src/lexer/tests.rs
expression: let y=true
---
[
  {
    "kind": {
      "type": "Let"
    },
    "span": {
      "start": 0,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "y"
      }
    },
    "span": {
      "start": 4,
      "end": 5
    }
  },
  {
    "kind": {
      "type": "Assign"
    },
    "span": {
      "start": 5,
      "end": 6
    }
  },
  {
    "kind": {
      "type": "True"
    },
    "span": {
      "start": 6,
      "end": 10
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 10,
      "end": 11
    }
  }
]
