src/libonion/src/lexer/snapshots/libonion__lexer__tests__tests__comments.snap
---
source: libonion/src/lexer/tests.rs
expression: // I am comments
---
[
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 16,
      "end": 17
    }
  }
]
