src/libonion/src/lexer/snapshots/libonion__lexer__tests__tests__complex.snap
---
source: libonion/src/lexer/tests.rs
expression: "\n            // welcome to monkeylang\n            let five = 5;\n            let ten = 10;\n            \n            let add = fn(x, y) {\n              x + y;\n            };\n            \n            let result = add(five, ten);\n            !-/*5;\n            5 < 10 > 5;\n            \n            if (5 < 10) {\n                return true;\n            } else {\n                return false;\n            }\n            \n            10 == 10;\n            10 != 9;\n        "
---
[
  {
    "kind": {
      "type": "ILLEGAL"
    },
    "span": {
      "start": 38,
      "end": 39
    }
  },
  {
    "kind": {
      "type": "Let"
    },
    "span": {
      "start": 50,
      "end": 53
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "five"
      }
    },
    "span": {
      "start": 54,
      "end": 58
    }
  },
  {
    "kind": {
      "type": "Assign"
    },
    "span": {
      "start": 59,
      "end": 60
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 5
    },
    "span": {
      "start": 61,
      "end": 62
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 62,
      "end": 63
    }
  },
  {
    "kind": {
      "type": "Let"
    },
    "span": {
      "start": 76,
      "end": 79
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "ten"
      }
    },
    "span": {
      "start": 80,
      "end": 83
    }
  },
  {
    "kind": {
      "type": "Assign"
    },
    "span": {
      "start": 84,
      "end": 85
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 10
    },
    "span": {
      "start": 86,
      "end": 88
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 88,
      "end": 89
    }
  },
  {
    "kind": {
      "type": "Let"
    },
    "span": {
      "start": 115,
      "end": 118
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "add"
      }
    },
    "span": {
      "start": 119,
      "end": 122
    }
  },
  {
    "kind": {
      "type": "Assign"
    },
    "span": {
      "start": 123,
      "end": 124
    }
  },
  {
    "kind": {
      "type": "Function"
    },
    "span": {
      "start": 125,
      "end": 127
    }
  },
  {
    "kind": {
      "type": "LParen"
    },
    "span": {
      "start": 127,
      "end": 128
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "x"
      }
    },
    "span": {
      "start": 128,
      "end": 129
    }
  },
  {
    "kind": {
      "type": "Comma"
    },
    "span": {
      "start": 129,
      "end": 130
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "y"
      }
    },
    "span": {
      "start": 131,
      "end": 132
    }
  },
  {
    "kind": {
      "type": "RParen"
    },
    "span": {
      "start": 132,
      "end": 133
    }
  },
  {
    "kind": {
      "type": "LBrace"
    },
    "span": {
      "start": 134,
      "end": 135
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "x"
      }
    },
    "span": {
      "start": 150,
      "end": 151
    }
  },
  {
    "kind": {
      "type": "Plus"
    },
    "span": {
      "start": 152,
      "end": 153
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "y"
      }
    },
    "span": {
      "start": 154,
      "end": 155
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 155,
      "end": 156
    }
  },
  {
    "kind": {
      "type": "RBrace"
    },
    "span": {
      "start": 169,
      "end": 170
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 170,
      "end": 171
    }
  },
  {
    "kind": {
      "type": "Let"
    },
    "span": {
      "start": 197,
      "end": 200
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "result"
      }
    },
    "span": {
      "start": 201,
      "end": 207
    }
  },
  {
    "kind": {
      "type": "Assign"
    },
    "span": {
      "start": 208,
      "end": 209
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "add"
      }
    },
    "span": {
      "start": 210,
      "end": 213
    }
  },
  {
    "kind": {
      "type": "LParen"
    },
    "span": {
      "start": 213,
      "end": 214
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "five"
      }
    },
    "span": {
      "start": 214,
      "end": 218
    }
  },
  {
    "kind": {
      "type": "Comma"
    },
    "span": {
      "start": 218,
      "end": 219
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "ten"
      }
    },
    "span": {
      "start": 220,
      "end": 223
    }
  },
  {
    "kind": {
      "type": "RParen"
    },
    "span": {
      "start": 223,
      "end": 224
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 224,
      "end": 225
    }
  },
  {
    "kind": {
      "type": "Bang"
    },
    "span": {
      "start": 238,
      "end": 239
    }
  },
  {
    "kind": {
      "type": "Minus"
    },
    "span": {
      "start": 239,
      "end": 240
    }
  },
  {
    "kind": {
      "type": "Slash"
    },
    "span": {
      "start": 240,
      "end": 241
    }
  },
  {
    "kind": {
      "type": "Asterisk"
    },
    "span": {
      "start": 241,
      "end": 242
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 5
    },
    "span": {
      "start": 242,
      "end": 243
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 243,
      "end": 244
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 5
    },
    "span": {
      "start": 257,
      "end": 258
    }
  },
  {
    "kind": {
      "type": "LessThan"
    },
    "span": {
      "start": 259,
      "end": 260
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 10
    },
    "span": {
      "start": 261,
      "end": 263
    }
  },
  {
    "kind": {
      "type": "GreaterThan"
    },
    "span": {
      "start": 264,
      "end": 265
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 5
    },
    "span": {
      "start": 266,
      "end": 267
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 267,
      "end": 268
    }
  },
  {
    "kind": {
      "type": "If"
    },
    "span": {
      "start": 294,
      "end": 296
    }
  },
  {
    "kind": {
      "type": "LParen"
    },
    "span": {
      "start": 297,
      "end": 298
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 5
    },
    "span": {
      "start": 298,
      "end": 299
    }
  },
  {
    "kind": {
      "type": "LessThan"
    },
    "span": {
      "start": 300,
      "end": 301
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 10
    },
    "span": {
      "start": 302,
      "end": 304
    }
  },
  {
    "kind": {
      "type": "RParen"
    },
    "span": {
      "start": 304,
      "end": 305
    }
  },
  {
    "kind": {
      "type": "LBrace"
    },
    "span": {
      "start": 306,
      "end": 307
    }
  },
  {
    "kind": {
      "type": "Return"
    },
    "span": {
      "start": 324,
      "end": 330
    }
  },
  {
    "kind": {
      "type": "True"
    },
    "span": {
      "start": 331,
      "end": 335
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 335,
      "end": 336
    }
  },
  {
    "kind": {
      "type": "RBrace"
    },
    "span": {
      "start": 349,
      "end": 350
    }
  },
  {
    "kind": {
      "type": "Else"
    },
    "span": {
      "start": 351,
      "end": 355
    }
  },
  {
    "kind": {
      "type": "LBrace"
    },
    "span": {
      "start": 356,
      "end": 357
    }
  },
  {
    "kind": {
      "type": "Return"
    },
    "span": {
      "start": 374,
      "end": 380
    }
  },
  {
    "kind": {
      "type": "False"
    },
    "span": {
      "start": 381,
      "end": 386
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 386,
      "end": 387
    }
  },
  {
    "kind": {
      "type": "RBrace"
    },
    "span": {
      "start": 400,
      "end": 401
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 10
    },
    "span": {
      "start": 427,
      "end": 429
    }
  },
  {
    "kind": {
      "type": "Equal"
    },
    "span": {
      "start": 431,
      "end": 432
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 10
    },
    "span": {
      "start": 433,
      "end": 435
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 435,
      "end": 436
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 10
    },
    "span": {
      "start": 449,
      "end": 451
    }
  },
  {
    "kind": {
      "type": "NotEqual"
    },
    "span": {
      "start": 453,
      "end": 454
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 9
    },
    "span": {
      "start": 455,
      "end": 456
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 456,
      "end": 457
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 466,
      "end": 467
    }
  }
]
