src/libonion/src/lexer/snapshots/libonion__lexer__tests__tests__component.snap
---
source: libonion/src/lexer/tests.rs
expression: "component Test{}"
---
[
  {
    "kind": {
      "type": "Component"
    },
    "span": {
      "start": 0,
      "end": 9
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "Test"
      }
    },
    "span": {
      "start": 10,
      "end": 14
    }
  },
  {
    "kind": {
      "type": "LBrace"
    },
    "span": {
      "start": 14,
      "end": 15
    }
  },
  {
    "kind": {
      "type": "RBrace"
    },
    "span": {
      "start": 15,
      "end": 16
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 16,
      "end": 17
    }
  }
]
