src/libonion/src/lexer/snapshots/libonion__lexer__tests__tests__hash.snap
---
source: libonion/src/lexer/tests.rs
expression: "{\"one\": 1, \"two\": 2, \"three\": 3}"
---
[
  {
    "kind": {
      "type": "LBrace"
    },
    "span": {
      "start": 0,
      "end": 1
    }
  },
  {
    "kind": {
      "type": "String",
      "value": "one"
    },
    "span": {
      "start": 1,
      "end": 6
    }
  },
  {
    "kind": {
      "type": "Colon"
    },
    "span": {
      "start": 6,
      "end": 7
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 1
    },
    "span": {
      "start": 8,
      "end": 9
    }
  },
  {
    "kind": {
      "type": "Comma"
    },
    "span": {
      "start": 9,
      "end": 10
    }
  },
  {
    "kind": {
      "type": "String",
      "value": "two"
    },
    "span": {
      "start": 11,
      "end": 16
    }
  },
  {
    "kind": {
      "type": "Colon"
    },
    "span": {
      "start": 16,
      "end": 17
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 2
    },
    "span": {
      "start": 18,
      "end": 19
    }
  },
  {
    "kind": {
      "type": "Comma"
    },
    "span": {
      "start": 19,
      "end": 20
    }
  },
  {
    "kind": {
      "type": "String",
      "value": "three"
    },
    "span": {
      "start": 21,
      "end": 28
    }
  },
  {
    "kind": {
      "type": "Colon"
    },
    "span": {
      "start": 28,
      "end": 29
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 3
    },
    "span": {
      "start": 30,
      "end": 31
    }
  },
  {
    "kind": {
      "type": "RBrace"
    },
    "span": {
      "start": 31,
      "end": 32
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 32,
      "end": 33
    }
  }
]
