src/libonion/src/lexer/snapshots/libonion__lexer__tests__tests__let_with_space.snap
---
source: libonion/src/lexer/tests.rs
expression: let x = 5
---
[
  {
    "kind": {
      "type": "Let"
    },
    "span": {
      "start": 0,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "Identifier",
      "value": {
        "name": "x"
      }
    },
    "span": {
      "start": 4,
      "end": 5
    }
  },
  {
    "kind": {
      "type": "Assign"
    },
    "span": {
      "start": 6,
      "end": 7
    }
  },
  {
    "kind": {
      "type": "Integer",
      "value": 5
    },
    "span": {
      "start": 8,
      "end": 9
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 9,
      "end": 10
    }
  }
]
