src/libonion/src/lexer/snapshots/libonion__lexer__tests__tests__simple.snap
---
source: libonion/src/lexer/tests.rs
expression: "=+(){},:;"
---
[
  {
    "kind": {
      "type": "Assign"
    },
    "span": {
      "start": 0,
      "end": 1
    }
  },
  {
    "kind": {
      "type": "Plus"
    },
    "span": {
      "start": 1,
      "end": 2
    }
  },
  {
    "kind": {
      "type": "LParen"
    },
    "span": {
      "start": 2,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "RParen"
    },
    "span": {
      "start": 3,
      "end": 4
    }
  },
  {
    "kind": {
      "type": "LBrace"
    },
    "span": {
      "start": 4,
      "end": 5
    }
  },
  {
    "kind": {
      "type": "RBrace"
    },
    "span": {
      "start": 5,
      "end": 6
    }
  },
  {
    "kind": {
      "type": "Comma"
    },
    "span": {
      "start": 6,
      "end": 7
    }
  },
  {
    "kind": {
      "type": "Colon"
    },
    "span": {
      "start": 7,
      "end": 8
    }
  },
  {
    "kind": {
      "type": "SemiColon"
    },
    "span": {
      "start": 8,
      "end": 9
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 9,
      "end": 10
    }
  }
]
