src/libonion/src/lexer/snapshots/libonion__lexer__tests__tests__string.snap
---
source: libonion/src/lexer/tests.rs
expression: "\"a\""
---
[
  {
    "kind": {
      "type": "String",
      "value": "a"
    },
    "span": {
      "start": 0,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 3,
      "end": 4
    }
  }
]
